flux/apps/navidrome/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
    spec:
      hostname: navidrome
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
        readOnlyRootFilesystem: true
      containers:
        - name: navidrome
          image: docker.io/deluan/navidrome:0.64.2
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: Always
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP # Web UI

          volumeMounts:
            - mountPath: /data
              name: navidrome-data
            - mountPath: /music
              name: navidrome-music
            - mountPath: /cache
              name: navidrome-cache
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: 1G
              cpu: "1"
            limits:
              memory: 1G
              cpu: "1"

      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: navidrome-music
        - name: navidrome-cache
          emptyDir:
            sizeLimit: 5Gi
