flux/apps/navidrome/service.yml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - name: http # Web UI
      port: 4533
      targetPort: http
      protocol: TCP
