flux/apps/navidrome/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome-web
  namespace: navidrome
  annotations:
    switchboard.borchero.com/ignore: all
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`navidrome.tartarus.us`)
      kind: Rule
      services:
        - name: navidrome
          kind: Service
          port: http

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
